--- a/CTSO.html
+++ b/CTSO.html
@@ -4,11 +4,22 @@
 <head></head>
 <title>Aviation CTSO</title>
 <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="base.css">
 </head>
 
 <body>
-
+    <header>
+        <img src="capstone_pics/Arrows.png" alt="" id="navicon">
+        <h1>West-Mec Aviation</h1>
+        <nav>
+            <img src="capstone_pics/Aviation Maintenance Technology.png" alt="">
+            <li> <a href="index.html">Home</a></li>
+            <li> <a href="About.html">About</a></li>
+            <li> <a href="Contact.html">Contact</a></li>
+            <li> <a href="CTSO.html">CTSO</a>
+            <li>
+        </nav>
+    </header>
 
 
 </body>
