First About Commit
started the css for the about page and got the title

--- a/About.html
+++ b/About.html
@@ -5,6 +5,7 @@
 <title>Aviation About</title>
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="base.css">
+<link rel="stylesheet" href="about.css">
 </head>
 
 <body>
@@ -20,6 +21,10 @@
             <li>
         </nav>
     </header>
+    <article>
+        <h1>About Us</h1>
+        <p></p>
+    </article>
 
 
 </body>
