contact page. need to put actual info in it

--- a/Contact.html
+++ b/Contact.html
@@ -20,9 +20,40 @@
             <li>
         </nav>
     </header>
+    <article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam 
+            quas est eaque dolore, magnam nesciunt nobis et commodi, ab dolores 
+            veritatis impedit. Eius autem, nemo totam at animi odio numquam.</p>
+
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatem architecto qui blanditiis dolorum perferendis minus 
+                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
+                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatem architecto qui blanditiis dolorum perferendis minus 
+                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
+                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatem architecto qui blanditiis dolorum perferendis minus 
+                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
+                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatem architecto qui blanditiis dolorum perferendis minus 
+                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
+                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatem architecto qui blanditiis dolorum perferendis minus 
+                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
+                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatem architecto qui blanditiis dolorum perferendis minus 
+                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
+                ducimus asperiores alias nihil dicta autem laborum?</p>
+                <h1>pictures</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Iste in odio tempore deserunt. Magni laboriosam facilis, 
+                    veritatis, quam recusandae corporis accusamus 
+                    at cupiditate, ea est quae repellat ipsum molestiae neque!</p>
+    </article>
 
 <footer >
-    <p> &#9827; @west-mec &#9827; </p>
+    <p> &#9827; @west-mec &#9827;  </p>
 </footer>
 </body>
 
