added pictures of some teachers to contact page

--- a/Contact.html
+++ b/Contact.html
@@ -28,28 +28,15 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Voluptatem architecto qui blanditiis dolorum perferendis minus 
-                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
-                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem architecto qui blanditiis dolorum perferendis minus 
-                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
-                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem architecto qui blanditiis dolorum perferendis minus 
-                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
-                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem architecto qui blanditiis dolorum perferendis minus 
-                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
-                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem architecto qui blanditiis dolorum perferendis minus 
-                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
-                ducimus asperiores alias nihil dicta autem laborum?orem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem architecto qui blanditiis dolorum perferendis minus 
-                eius quaerat est, perspiciatis molestias suscipit vitae corporis 
                 ducimus asperiores alias nihil dicta autem laborum?</p>
-                <h1>pictures</h1>
+       
+        <img src="capstone_pics/Jay McDowell.jpg" alt="Jay_McDowell.png" />
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                     Iste in odio tempore deserunt. Magni laboriosam facilis, 
                     veritatis, quam recusandae corporis accusamus 
                     at cupiditate, ea est quae repellat ipsum molestiae neque!</p>
+
+                <img src="capstone_pics/Matthew Still.jpg" alt="Matthew Still.jpg" />
     </article>
 
 <footer >
