--- a/Contact.html
+++ b/Contact.html
@@ -31,12 +31,28 @@
                 ducimus asperiores alias nihil dicta autem laborum?</p>
        
         <img src="capstone_pics/Jay McDowell.jpg" alt="Jay_McDowell.png" />
+      
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                     Iste in odio tempore deserunt. Magni laboriosam facilis, 
                     veritatis, quam recusandae corporis accusamus 
                     at cupiditate, ea est quae repellat ipsum molestiae neque!</p>
 
                 <img src="capstone_pics/Matthew Still.jpg" alt="Matthew Still.jpg" />
+                <p>email</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Amet error eos dolorum eaque ab cupiditate expedita magnam sapiente, 
+                    asperiores officia est voluptates quasi esse voluptas modi sed, aliquam, explicabo laboriosam!</p>
+                    <img src="capstone_pics/Tama Mohelnitzky.jpg" alt="tama">
+                    <p>email</p>
+
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus beatae consectetur odit, architecto atque animi nobis rem debitis 
+                        unde mollitia sint itaque, enim quisquam fuga temporibus inventore exercitationem reprehenderit ex.</p>
+                        <img src="capstone_pics/Terry Menees.jpg" alt="trrry">
+                        <p>email: </p>
+                        <p>westmec campus phone number:_</p>
+                        <p>west-mec campus general email: _</p>
+                        <p></p>
+
     </article>
 
 <footer >
