added footer to the about page, ctso and the home page

--- a/Contact.html
+++ b/Contact.html
@@ -52,6 +52,8 @@
                         <p>westmec campus phone number:_</p>
                         <p>west-mec campus general email: _</p>
                         <p></p>
+                        
+                        <h1>do a map over here</h1>
 
     </article>
 
