--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <li>
         </nav>
     </header>
-
+<footer>
+        <p> &#9827; @west-mec &#9827;  </p>
+</footer>
 </body>
 
 </html>
