--- a/About.html
+++ b/About.html
@@ -12,20 +12,29 @@
     <header>
         <img src="capstone_pics/Arrows.png" alt="" id="navicon">
         <h1>West-Mec Aviation</h1>
-        <nav>
-            <img src="capstone_pics/Aviation Maintenance Technology.png" alt="">
-            <li> <a href="index.html">Home</a></li>
-            <li> <a href="About.html">About</a></li>
-            <li> <a href="Contact.html">Contact</a></li>
-            <li> <a href="CTSO.html">CTSO</a>
-            <li>
-        </nav>
     </header>
+    <nav>
+        <img src="capstone_pics/Aviation Maintenance Technology.png" alt="">
+        <li> <a href="index.html">Home</a></li>
+        <li> <a href="About.html">About</a></li>
+        <li> <a href="Contact.html">Contact</a></li>
+        <li> <a href="CTSO.html">CTSO</a>
+        <li>
+    </nav>
     <article>
         <h1>About Us</h1>
-        <p></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis placeat nostrum iure. Sit ea impedit
+            consequuntur magnam hic doloremque voluptates iusto excepturi soluta recusandae obcaecati nihil, atque ab
+            odit in.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis placeat nostrum iure. Sit ea impedit
+            consequuntur magnam hic doloremque voluptates iusto excepturi soluta recusandae obcaecati nihil, atque ab
+            odit in.</p>
     </article>
-
+    <aside>
+        <h2>Q&A</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam aliquam nesciunt illum tempore enim? Maxime,
+            incidunt. Velit possimus sapiente dolore laboriosam neque aspernatur itaque adipisci ipsa temporibus
+        </p>
+    </aside>
 
 </body>
 
