--- a/About.html
+++ b/About.html
@@ -21,7 +21,8 @@
         </nav>
     </header>
 <footer>
-        <p> &#9827; @west-mec &#9827;  </p>
+        <p> &#9827; Central Campus 6997 N. Glen Harbor Boulevard
+            Glendale, AZ 85307 &#9827; 623.738.0022 &#9827; </p>
 </footer>
 
 </body>
