--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- Sidebar on click -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-card w3-animate-left w3-xxlarge" style="display:none;z-index:2" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-display-topright w3-text-teal">Close
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-display-topright w3-text-orange">Close
     <i class="fa fa-remove"></i>
   </a>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
@@ -23,16 +23,16 @@
 <!-- Navbar -->
 <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-left-align">
-  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Logo</a>
-  <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
-  <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work</a>
+  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-#f7931d w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+  <a href="#" class="w3-bar-item w3-button w3-orange"><i class="fa fa-home w3-margin-right"></i>Home</a>
+  <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Team</a>
+  <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Work</a>
   <!-- <a href="#pricing" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Price</a> -->
-  <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Contact</a>
     
     </div>
   </div>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Search"><i class="fa fa-search"></i></a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-orang" title="Search"><i class="fa fa-search"></i></a>
  </div>
 
   <!-- Navbar on small screens -->
@@ -47,25 +47,25 @@
 
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="/w3images/sailboat.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <img src="capstone_pics/architectural-design-architecture-building-2071216.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
-    <!-- <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">LEARN W3.CSS</button> -->
+    <!-- <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-orange" title="Go To W3.CSS">LEARN W3.CSS</button> -->
   <!-- </div> -->
 </div>
 
 <!-- Modal -->
 <div id="id01" class="w3-modal">
   <div class="w3-modal-content w3-card-4 w3-animate-top">
-    <header class="w3-container w3-teal w3-display-container"> 
-      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-teal w3-display-topright"><i class="fa fa-remove"></i></span>
+    <header class="w3-container w3-orange w3-display-container"> 
+      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-orange w3-display-topright"><i class="fa fa-remove"></i></span>
       <h4>Oh snap! We just showed you a modal..</h4>
       <h5>Because we can <i class="fa fa-smile-o"></i></h5>
     </header>
     <div class="w3-container">
       <p>Cool huh? Ok, enough teasing around..</p>
-      <p>Go to our <a class="w3-text-teal" href="/w3css/default.asp">W3.CSS Tutorial</a> to learn more!</p>
+      <p>Go to our <a class="w3-text-orange" href="/w3css/default.asp">W3.CSS Tutorial</a> to learn more!</p>
     </div>
-    <footer class="w3-container w3-teal">
+    <footer class="w3-container w3-orange">
       <p>Modal footer</p>
     </footer>
   </div>
@@ -81,25 +81,25 @@
 <div class="w3-quarter">
   <img src="capstone_pics/Jay McDowell.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Jay McDowell</h3>
-  <p>.</p>
+  <!-- <p>.</p> -->
 </div>
 
 <div class="w3-quarter">
   <img src="capstone_pics/Matthew Still.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Matthew Still</h3>
-  <p>.</p>
+  <!-- <p>.</p> -->
 </div>
 
 <div class="w3-quarter">
   <img src="capstone_pics/Tama Mohelnitzky.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Tama Mohelnitzky</h3>
-  <p>.</p>
+  <!-- <p>.</p> -->
 </div>
 
 <div class="w3-quarter">
   <img src="capstone_pics/Terry Menees.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Terry Menees</h3>
-  <p>.</p>
+  <!-- <p>.</p> -->
 </div>
 
 </div>
@@ -109,48 +109,52 @@
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
 
 <div class="w3-quarter">
-<h2>What we do!</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h2>What you will be doing here</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
+  laborum.</p>
 </div>
 
 <div class="w3-quarter">
-<div class="w3-card w3-white">
-  <img src="/w3images/snow.jpg" alt="Snow" style="width:100%">
+<div class="w3-card w3-orange">
+  <img src="capstone_pics/AV_1.JPG" alt="Snow" style="width:100%">
   <div class="w3-container">
-  <h3>Customer 1</h3>
+  <!-- <h3>Customer 1</h3>
   <h4>Trade</h4>
   <p>Blablabla</p>
   <p>Blablabla</p>
   <p>Blablabla</p>
-  <p>Blablabla</p>
-  </div>
-  </div>
-</div>
-
-<div class="w3-quarter">
-<div class="w3-card w3-white">
-  <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
-  <div class="w3-container">
-  <h3>Customer 2</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <p>Blablabla</p> -->
   </div>
   </div>
 </div>
 
 <div class="w3-quarter">
 <div class="w3-card w3-white">
-  <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
+  <img src="capstone_pics/AV_11.JPG" alt="Lights" style="width:100%">
   <div class="w3-container">
-  <h3>Customer 3</h3>
+  <!-- <h3>Customer 2</h3>
   <h4>Trade</h4>
   <p>Blablabla</p>
   <p>Blablabla</p>
   <p>Blablabla</p>
+  <p>Blablabla</p> -->
+  </div>
+  </div>
+</div>
+
+<div class="w3-quarter">
+<div class="w3-card w3-white">
+  <img src="capstone_pics/080418-F-1954M-906 (1).JPG" alt="Mountains" style="width:100%">
+  <div class="w3-container">
+  <!-- <h3>Customer 3</h3> -->
+  <!-- <h4>Trade</h4>
   <p>Blablabla</p>
+  <p>Blablabla</p>
+  <p>Blablabla</p>
+  <p>Blablabla</p> -->
   </div>
   </div>
 </div>
@@ -159,12 +163,12 @@
 
 <!-- Container -->
 <div class="w3-container" style="position:relative">
-  <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal"
+  <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-orange"
   style="position:absolute;top:-28px;right:24px">+</a>
 </div>
 
 <!-- Pricing Row -->
-<div class="w3-row-padding w3-center w3-padding-64" id="pricing">
+<!-- <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
     <h2>PRICING</h2>
     <p>Choose a pricing plan that fits your needs.</p><br>
     <div class="w3-third w3-margin-bottom">
@@ -181,7 +185,7 @@
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
+          <button class="w3-button w3-orange w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
         </li>
       </ul>
     </div>
@@ -200,7 +204,7 @@
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
+          <button class="w3-button w3-orange w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
         </li>
       </ul>
     </div>
@@ -219,22 +223,26 @@
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-theme-l5 w3-padding-24">
-          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
+          <button class="w3-button w3-orange w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
         </li>
       </ul>
     </div>
-</div>
+</div> -->
 
 <!-- Contact Container -->
 <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
-    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-orange w3-bottombar">Contact </span></div>
       <h3>Address</h3>
-      <p>Swing by for a cup of coffee, or whatever.</p>
-      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Chicago, US</p>
-      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +00 1515151515</p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
+      <!-- <p>Swing by for a cup of coffee, or whatever.</p> -->
+      <p><i class="fa fa-map-marker w3-text-orange w3-xlarge"></i> <b>Central Campus :</b>  6997 N. Glen Harbor Boulevard
+        Glendale, AZ 85307</p>
+        
+      <p><i class="fa fa-phone w3-text-orange w3-xlarge"></i> <b>623-209-8070</b></p>
+      <!-- <p><i class="fa fa-envelope-o w3-text-orange w3-xlarge"></i>  test@test.com</p> -->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3325.6720330141225!2d-112.29502618479842!3d33.53591168074957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b41030b775f07%3A0xca01072481b6137d!2s6997+N+Glen+Harbor+Blvd%2C+Glendale%2C+AZ+85307!5e0!3m2!1sen!2sus!4v1554757023961!5m2!1sen!2sus" width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+
     </div>
     <div class="w3-col m7">
       <form class="w3-container w3-card-4 w3-padding-16 w3-white" action="/action_page.php" target="_blank">
@@ -249,30 +257,32 @@
       <div class="w3-section">      
         <label>Message</label>
         <input class="w3-input" type="text" name="Message" required>
+
       </div>  
-      <input class="w3-check" type="checkbox" checked name="Like">
-      <label>I Like it!</label>
+      <!-- <input class="w3-check" type="checkbox" checked name="Like">
+      <label>I Like it!</label> -->
       <button type="submit" class="w3-button w3-right w3-theme">Send</button>
+
       </form>
     </div>
   </div>
 </div>
 
 <!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%;">
+<!-- <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%;"> -->
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
   <h4>Follow Us</h4>
-  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
-  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
-  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
-  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
-  <a class="w3-button w3-large w3-teal w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+  <a class="w3-button w3-large w3-orange" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
+  <a class="w3-button w3-large w3-orange" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
+  <a class="w3-button w3-large w3-orange" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
+  <a class="w3-button w3-large w3-orange" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
+  <a class="w3-button w3-large w3-orange w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
-    <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>   
+    <span class="w3-text w3-padding w3-orange w3-hide-small">Go To Top</span>   
     <a class="w3-button w3-theme" href="#myPage"><span class="w3-xlarge">
     <i class="fa fa-chevron-circle-up"></i></span></a>
   </div>
