--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   <a class="w3-button w3-large w3-orange" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
   <a class="w3-button w3-large w3-orange" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
   <a class="w3-button w3-large w3-orange w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <!-- <p>#@123 <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
     <span class="w3-text w3-padding w3-orange w3-hide-small">Go To Top</span>   
@@ -311,6 +311,7 @@ function openNav() {
     x.className = x.className.replace(" w3-show", "");
   }
 }
+
 </script>
 
 </body>
