--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
     <!-- CTSO Row -->
     <div class="w3-row-padding w3-center w3-padding-64" id="ctso">
       <h2>CTSO</h2>
-      <p>What there CTSO is</p><br>
       <div class="w3-quarter">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque repudiandae
           officia iure laudantium
@@ -171,7 +170,7 @@
           placeat amet quam, nam nisi ipsam?</p>
       </div>
       <div class="w3-quarter">
-        <img src="capstone_pics/AV_11.JPG" alt="Lights" style="width:200%;">
+        <img src="capstone_pics/skillUSA.png" alt="Skills USA" style="width:200%;">
       </div>
       <div class="w3-quarter">
         <p> </p>
