--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <a href="#" class="w3-bar-item w3-button w3-orange"><i class="fa fa-home w3-margin-right"></i>Home</a>
       <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Team</a>
       <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Work</a>
-      <a href="#ctso" class="w3-bar-item w3-button w3-hide-small w3-hover-white">CTSO</a>
+      <a href="#ctso" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">CTSO</a>
       <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Contact</a>
 
     </div>
@@ -289,7 +289,7 @@
       document.getElementById("jayPic").onclick = function () {
         document.getElementById("jayPic").style.display = "none";
         document.getElementById("jay").style.display = "inline";
-        setTimeout(reapear, 10000)
+        setTimeout(reapear, 10000);
       }
       document.getElementById("jay").onclick = function () {
         document.getElementById("jay").style.display = "none";
@@ -298,6 +298,7 @@
       document.getElementById("terryPic").onclick = function () {
         document.getElementById("terryPic").style.display = "none";
         document.getElementById("terry").style.display = "inline";
+        setTimeout(reapear, 10000);
       }
       document.getElementById("terry").onclick = function () {
         document.getElementById("terry").style.display = "none";
@@ -306,6 +307,7 @@
       document.getElementById("tamaPic").onclick = function () {
         document.getElementById("tamaPic").style.display = "none";
         document.getElementById("tama").style.display = "inline";
+        setTimeout(reapear, 10000);
       }
       document.getElementById("tama").onclick = function () {
         document.getElementById("tama").style.display = "none";
@@ -314,6 +316,7 @@
       document.getElementById("mathewPic").onclick = function () {
         document.getElementById("mathewPic").style.display = "none";
         document.getElementById("mathew").style.display = "inline";
+        setTimeout(reapear, 10000);
       }
       document.getElementById("mathew").onclick = function () {
         document.getElementById("mathew").style.display = "none";
