--- a/index.html
+++ b/index.html
@@ -174,23 +174,21 @@
     <div class="w3-row-padding w3-center w3-padding-64" id="ctso">
       <h1>CTSO</h1>
       <div class="w3-third">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque repudiandae
-          officia iure laudantium
-          aspernatur, pariatur eius, cum perspiciatis delectus dignissimos quasi dolores itaque laborum placeat amet
-          quam, nam nisi ipsam?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque repudiandae officia
-          iure laudantium aspernatur, pariatur eius, cum perspiciatis delectus dignissimos quasi dolores itaque laborum
-          placeat amet quam, nam nisi ipsam?</p>
+        <p>Our CTSO is SkillsUSA. SkillsUSA is a partnership of students, teachers and industry working together to
+          ensure America has a skilled workforce. Their main goal is to help students excel. SkillsUSA serves more than
+          360,000 students and instructors annually. SKillsUSA has served more than 13.5 million members since 1965. Our
+          local chapter ......
+        </p>
       </div>
       <div class="w3-third">
         <img src="capstone_pics/skillsUSA.png" id="skillUsa" alt="Skills USA" style="width:100%;">
       </div>
       <div class="w3-third">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque repudiandae
-          officia iure laudantium
-          aspernatur, pariatur eius, cum perspiciatis delectus dignissimos quasi dolores itaque laborum placeat amet
-          quam, nam nisi ipsam?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque repudiandae officia
-          iure laudantium aspernatur, pariatur eius, cum perspiciatis delectus dignissimos quasi dolores itaque laborum
-          placeat amet quam, nam nisi ipsam?</p>
+        <p>SkillsUSA focuses on building the three framework skills which are Technical, Personal, and Workplace. This
+          framework provides a common language for students to articulate what they gain from SkillsUSA to possible
+          employers. It allows students to assesses thier develpment in the skills they learn. It empowers students to
+          seize control of thier own learning to achieve a successful career. Most importantly it gives students a skill
+          set that it demanded by business and industry but lacking in many employees today.</p>
       </div>
     </div>
 
